--- a/mamamia-massas/package.json
+++ b/mamamia-massas/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.7.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "swc": "^1.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
